--- a/templates/logged.html
+++ b/templates/logged.html
@@ -32,9 +32,12 @@
 {% block main %}
     <div class="loggedMain">
         <div class="loggedDiv">
-            Total Admins: {{ admins | length }}<br>
-            Total Users: {{ users | length }}<br>
-            Total Unconfirmeds: {{ unconfirmeds | length }}<br>
+            Statistics:
+            <ul>
+                <li>Total Admins: {{ admins | length }}</li>
+                <li>Total Users: {{ users | length }}</li>
+                <li>Total Unconfirmeds: {{ unconfirmeds | length }}</li>
+            </ul>
         </div>
         <br>
         <div class="loggedDiv">
@@ -56,19 +59,16 @@
         </div>
         <br>
         <div class="loggedDiv">
-            Remove a user:
             <input id="remove" autocomplete="off" autofocus class="form-control" name="remove" placeholder=" Remove user" type="text">
             <button type="submit" name="remove" value="remove">Remove</button>
         </div>
         <br>
         <div class="loggedDiv">
-            Make a user an admin: 
             <input id="remove" autocomplete="off" autofocus class="form-control" name="promote" placeholder=" Promote user" type="text">
             <button type="submit" name="promote" value="promote">Promote</button>
         </div>
         <br>
         <div class="loggedDiv">
-            Make an admin a user:
             <input id="remove" autocomplete="off" autofocus class="form-control" name="demote" placeholder=" Demote admin" type="text">
             <button type="submit" name="demote" value="demote">Demote</button>
         </div>
