--- a/templates/logged.html
+++ b/templates/logged.html
@@ -58,17 +58,17 @@
             </ul>
         </div>
         <br>
-        <div class="loggedDiv">
+        <div class="loggedDivButton">
             <input id="remove" autocomplete="off" autofocus class="form-control" name="remove" placeholder=" Remove user" type="text">
             <button type="submit" name="remove" value="remove">Remove</button>
         </div>
         <br>
-        <div class="loggedDiv">
+        <div class="loggedDivButton">
             <input id="remove" autocomplete="off" autofocus class="form-control" name="promote" placeholder=" Promote user" type="text">
             <button type="submit" name="promote" value="promote">Promote</button>
         </div>
         <br>
-        <div class="loggedDiv">
+        <div class="loggedDivButton">
             <input id="remove" autocomplete="off" autofocus class="form-control" name="demote" placeholder=" Demote admin" type="text">
             <button type="submit" name="demote" value="demote">Demote</button>
         </div>
