--- a/static/styles.css
+++ b/static/styles.css
@@ -543,15 +543,21 @@ button {
 	overflow: auto;
 }
 
-.loggedDiv button {
+.loggedDivButton {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	align-content: center;
+}
+
+.loggedDivButton button {
 	background-color: #f44336;
 	border: none;
 	color: white;
-	padding: 15px 32px;
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
-	font-size: 16px;
-	margin: 4px 2px;
 	cursor: pointer;
 }
