--- a/static/styles.css
+++ b/static/styles.css
@@ -560,5 +560,6 @@ button {
 	text-decoration: none;
 	display: inline-block;
 	cursor: pointer;
-	padding: 5px 10px;
+	padding: 6px 10px;
+	margin-left: 5px;
 }
