--- a/templates/logged.html
+++ b/templates/logged.html
@@ -34,9 +34,9 @@
         <div class="loggedDiv">
             Statistics:
             <ul>
-                <li>Total Admins: {{ admins | length }}</li>
-                <li>Total Users: {{ users | length }}</li>
-                <li>Total Unconfirmeds: {{ unconfirmeds | length }}</li>
+                <li>Total Admin(s): {{ admins | length }}</li>
+                <li>Total User(s): {{ users | length }}</li>
+                <li>Total Unconfirmed(s): {{ unconfirmeds | length }}</li>
             </ul>
         </div>
         <br>
@@ -64,12 +64,12 @@
         </div>
         <br>
         <div class="loggedDivButton">
-            <input id="remove" autocomplete="off" autofocus class="form-control" name="promote" placeholder=" Promote user" type="text">
+            <input id="promote" autocomplete="off" autofocus class="form-control" name="promote" placeholder=" Promote user" type="text">
             <button type="submit" name="promote" value="promote">Promote</button>
         </div>
         <br>
         <div class="loggedDivButton">
-            <input id="remove" autocomplete="off" autofocus class="form-control" name="demote" placeholder=" Demote admin" type="text">
+            <input id="demote" autocomplete="off" autofocus class="form-control" name="demote" placeholder=" Demote admin" type="text">
             <button type="submit" name="demote" value="demote">Demote</button>
         </div>
         <br>
