--- a/templates/logged.html
+++ b/templates/logged.html
@@ -31,7 +31,7 @@
 
 {% block main %}
     <div class="loggedMain">
-        <form action="/logged" method="post">
+        <form action="/logged" action="" method="post">
             <div class="loggedDiv">
                 Statistics:
                 <ul>
@@ -61,17 +61,17 @@
             <br>
             <div class="loggedDivButton">
                 <input id="remove" autocomplete="off" autofocus class="form-control" name="remove" placeholder=" Remove user" type="text">
-                <button type="submit" name="remove" value="remove">Remove</button>
+                <button type="submit" name="action" value="remove">Remove</button>
             </div>
             <br>
             <div class="loggedDivButton">
                 <input id="promote" autocomplete="off" autofocus class="form-control" name="promote" placeholder=" Promote user" type="text">
-                <button type="submit" name="promote" value="promote">Promote</button>
+                <button type="submit" name="action" value="promote">Promote</button>
             </div>
             <br>
             <div class="loggedDivButton">
                 <input id="demote" autocomplete="off" autofocus class="form-control" name="demote" placeholder=" Demote admin" type="text">
-                <button type="submit" name="demote" value="demote">Demote</button>
+                <button type="submit" name="action" value="demote">Demote</button>
             </div>
             <br>
         </form>
