--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
                                     <div class="IndexInfo3">
                                         <div name="{{ plant.description | safe }}">Description: {{ plant.description | safe }}</div>
                                     </div>
-                                    <div>
+                                    <div class="IndexInfo4">
                                         <img name="{{ plant.thumbnail1 | safe }}" src="{{ plant.thumbnail1 | safe }}" alt="plant picture of {{ plant.name | safe }}" width="200px">
                                         <img name="{{ plant.thumbnail2 | safe }}" src="{{ plant.thumbnail2 | safe }}" alt="plant picture of {{ plant.name | safe }}" width="200px">
                                     </div>
@@ -99,6 +99,10 @@
                                     </div>
                                     <div class="IndexInfo3">
                                         <div name="{{ plant.description | safe }}">Description: {{ plant.description | safe }}</div>
+                                    </div>
+                                    <div class="IndexInfo4">
+                                        <img name="{{ plant.thumbnail1 | safe }}" src="{{ plant.thumbnail1 | safe }}" alt="plant picture of {{ plant.name | safe }}" width="200px">
+                                        <img name="{{ plant.thumbnail2 | safe }}" src="{{ plant.thumbnail2 | safe }}" alt="plant picture of {{ plant.name | safe }}" width="200px">
                                     </div>
                                 </div>
                             </div>
