--- a/templates/add.html
+++ b/templates/add.html
@@ -54,6 +54,14 @@
             </div>
             <br>
             <div>
+                <input type="file" id="thumbnail1" name="thumbnail1">
+            </div>
+            <br>
+            <div>
+                <input type="file" id="thumbnail2" name="thumbnail2">
+            </div>
+            <br>
+            <div>
                 <input type="checkbox" id="show" name="show" value="show">
                 <label for="show"> Show?</label>
             </div>
