--- a/templates/edit.html
+++ b/templates/edit.html
@@ -58,6 +58,14 @@
                     <input type="file" id="picture" name="picture">
                 </div>
                 <br>
+                <div>
+                    <input type="file" id="thumbnail1" name="thumbnail1">
+                </div>
+                <br>
+                <div>
+                    <input type="file" id="thumbnail2" name="thumbnail2">
+                </div>
+                <br>
                     {% if plants[6] == "Yes" %}
                     <div>
                         <input type="checkbox" id="show" name="show" value="show" checked>
