--- a/templates/add.html
+++ b/templates/add.html
@@ -50,14 +50,17 @@
             </div>
             <br>
             <div>
+                Main picture: 
                 <input type="file" id="picture" name="picture">
             </div>
             <br>
             <div>
+                First thumbnail: 
                 <input type="file" id="thumbnail1" name="thumbnail1">
             </div>
             <br>
             <div>
+                Second thumbnail: 
                 <input type="file" id="thumbnail2" name="thumbnail2">
             </div>
             <br>
