--- a/static/styles.css
+++ b/static/styles.css
@@ -440,6 +440,14 @@ button {
 	align-content: center;;	
 }
 
+.AddSecond {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: flex-start;
+	align-content: center;	
+}
 
 /*  EDIT  */
 
