--- a/templates/add.html
+++ b/templates/add.html
@@ -49,24 +49,26 @@
                 {{ ckeditor.load(custom_url=url_for('static', filename='ckeditor/ckeditor.js')) }}
             </div>
             <br>
-            <div>
-                Main picture: 
-                <input type="file" id="picture" name="picture">
-            </div>
-            <br>
-            <div>
-                First thumbnail: 
-                <input type="file" id="thumbnail1" name="thumbnail1">
-            </div>
-            <br>
-            <div>
-                Second thumbnail: 
-                <input type="file" id="thumbnail2" name="thumbnail2">
-            </div>
-            <br>
-            <div>
-                <input type="checkbox" id="show" name="show" value="show">
-                <label for="show"> Show?</label>
+            <div class="AddSecond">
+                <div>
+                    Main picture: 
+                    <input type="file" id="picture" name="picture">
+                </div>
+                <br>
+                <div>
+                    First thumbnail: 
+                    <input type="file" id="thumbnail1" name="thumbnail1">
+                </div>
+                <br>
+                <div>
+                    Second thumbnail: 
+                    <input type="file" id="thumbnail2" name="thumbnail2">
+                </div>
+                <br>
+                <div>
+                    <input type="checkbox" id="show" name="show" value="show">
+                    <label for="show"> Show?</label>
+                </div>
             </div>
             <br>
             <div>
