--- a/templates/layout.html
+++ b/templates/layout.html
@@ -70,6 +70,11 @@
                                     <span>History</span>
                             </div>
 
+                            <div class="click-to-top">
+                                <li class="NavBarLi"><a href="/faq"><img src="/static/search.svg" alt="search" height="50"></a></li>
+                                    <span>Search</span>
+                            </div>
+
                         </div>
                         <div class="NavBarRight">
                             {% block navigation %}{% endblock %}
