--- a/templates/faq.html
+++ b/templates/faq.html
@@ -30,7 +30,7 @@
 {% endblock %}
 
 {% block main %}
-    History page
+    FAQ page
     <br>
     <div>
         <a href="/"><img src="/static/back.svg" alt="back" height="50"></a>
