--- a/templates/layout.html
+++ b/templates/layout.html
@@ -72,7 +72,7 @@
 
                             <div class="click-to-top">
                                 <li class="NavBarLi"><a href="/faq"><img src="/static/search.svg" alt="search" height="50"></a></li>
-                                    <span>Search</span>
+                                    <span>FAQ</span>
                             </div>
 
                         </div>
