--- a/static/styles.css
+++ b/static/styles.css
@@ -440,6 +440,15 @@ button {
 
 .AddFirst {
 	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: flex-start;
+	align-items: stretch;
+	align-content: stretch;
+}
+
+.AddSecond {
+	display: flex;
 	flex-direction: row;
 	flex-wrap: nowrap;
 	justify-content: center;
