--- a/templates/add.html
+++ b/templates/add.html
@@ -36,11 +36,17 @@
                 <div>
                     <input id="name" autocomplete="off" autofocus class="form-control" name="name" placeholder="Name" type="text">
                 </div>
-                <div>
-                    <input id="stock" autocomplete="off" autofocus class="form-control" name="stock" placeholder="Stock" type="number" min="0">
-                </div>
-                <div>
-                    <input id="price" autocomplete="off" autofocus class="form-control" name="price" placeholder="Price" type="number" min="0">
+                <div class="AddSecond">
+                    <div>
+                        <input id="stock" autocomplete="off" autofocus class="form-control" name="stock" placeholder="Stock" type="number" min="0">
+                    </div>
+                    <div>
+                        <input id="price" autocomplete="off" autofocus class="form-control" name="price" placeholder="Price" type="number" min="0">
+                    </div>
+                    <div>
+                        <input id="offer" autocomplete="off" autofocus class="form-control" name="offer" placeholder="Offer" type="number" min="0">
+                    </div>
+                    </div>
                 </div>
             </div>
             <br>
@@ -55,18 +61,23 @@
             </div>
             <br>
             <div>
-                First thumbnail: 
+                1st thumbnail: 
                 <input type="file" id="thumbnail1" name="thumbnail1">
             </div>
             <br>
             <div>
-                Second thumbnail: 
+                2nd thumbnail: 
                 <input type="file" id="thumbnail2" name="thumbnail2">
             </div>
             <br>
             <div>
                 <input type="checkbox" id="show" name="show" value="show">
-                <label for="show"> Show?</label>
+                <label for="show"> Show reduced price?</label>
+            </div>
+            <br>
+            <div>
+                <input type="checkbox" id="show" name="show" value="show">
+                <label for="show"> Show in app?</label>
             </div>
             <br>
             <div>
