--- a/templates/add.html
+++ b/templates/add.html
@@ -70,8 +70,8 @@
             </div>
             <br>
             <div>
-                <input type="checkbox" id="show" name="show" value="show">
-                <label for="show"> Show reduced price?</label>
+                <input type="checkbox" id="reduced" name="reduced" value="reduced">
+                <label for="reduced"> Show reduced price?</label>
             </div>
             <div>
                 <input type="checkbox" id="show" name="show" value="show">
