--- a/templates/administration.html
+++ b/templates/administration.html
@@ -38,7 +38,9 @@
                         <th scope="col">Name</th>
                         <th scope="col">Stock</th>
                         <th scope="col">Price</th>
+                        <th scope="col">Offer</th>
                         <th scope="col">Picture</th>
+                        <th scope="col">Reduced</th>
                         <th scope="col">Show</th>
                     </tr>
                 </thead>
@@ -49,7 +51,9 @@
                             <td>{{ plant.name | safe }}</td>
                             <td>{{ plant.stock | safe }}</td>
                             <td>{{ plant.price | safe }},00€</td>
+                            <td>{{ plant.reduced | safe }},00€</td>
                             <td><img src="{{ plant.picture | safe }}" alt="plant picture of {{ plant.name | safe }}" height="50"></td>
+                            <td>{{ plant.reduced | safe }}</td>
                             <td>{{ plant.show | safe }}</td>
                             <td><button name="delete" value="{{ plant.id }}" type="submit"><img src="/static/trash.svg" alt="delete" height="25"></button></td>
                             <td><button name="edit" value="{{ plant.id }}" type="submit"><img src="/static/updateB.svg" alt="edit" height="25"></button></td>
