--- a/templates/administration.html
+++ b/templates/administration.html
@@ -51,7 +51,7 @@
                             <td>{{ plant.name | safe }}</td>
                             <td>{{ plant.stock | safe }}</td>
                             <td>{{ plant.price | safe }},00€</td>
-                            <td>{{ plant.reduced | safe }},00€</td>
+                            <td>{{ plant.offer | safe }},00€</td>
                             <td><img src="{{ plant.picture | safe }}" alt="plant picture of {{ plant.name | safe }}" height="50"></td>
                             <td>{{ plant.reduced | safe }}</td>
                             <td>{{ plant.show | safe }}</td>
