--- a/templates/edit.html
+++ b/templates/edit.html
@@ -76,13 +76,13 @@
                 <br>
                     {% if plants[7] == "Yes" %}
                     <div>
-                        <input type="checkbox" id="show" name="show" value="show" checked>
-                        <label for="show"> Show reduced price?</label>
+                        <input type="checkbox" id="reduced" name="reduced" value="reduced" checked>
+                        <label for="reduced"> Show reduced price?</label>
                     </div>
                     {% else %}
                     <div>
-                        <input type="checkbox" id="show" name="show" value="show">
-                        <label for="show"> Show reduced price?</label>
+                        <input type="checkbox" id="reduced" name="reduced" value="reduced">
+                        <label for="reduced"> Show reduced price?</label>
                     </div>
                     {% endif %}
                     {% if plants[8] == "Yes" %}
